Fix: textoverflow in cards

--- a/src/LandingPage/content/landingpage2.scss
+++ b/src/LandingPage/content/landingpage2.scss
@@ -8,7 +8,7 @@
   --accent-color: var(--vscode-notebook-cellInsertionIndicator); // blue highlight or action indicator color
   --danger-color: #d50000;
 
-  div[data-prototype]
+  div[data-prototype] 
   {
     display: none !important;
   }
@@ -438,7 +438,8 @@
 
             flex-grow: 1;
             display: flex;
-            align-items: flex-end;                    
+            align-items: flex-end;    
+            max-width: stretch;
   
             [data-field="project.label"]
             {
